--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,12 +15,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <link rel="icon" href="./src/assets/homepage-images/favicon.png"></link>
+    <link rel="icon" href="./src/assets/homepage-images/favicon.png" />
 
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
 
-
+<link rel="shortcut icon" href="./src/assets/homepage-images/favicon.webp" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
